logs/dag_id=test_dag_tutorial/run_id=scheduled__2020-06-23T000000+0000/task_id=create_postgres_table/attempt=1.log
[2023-11-02T11:24:59.326+0000] {taskinstance.py:1165} INFO - Dependencies all met for <TaskInstance: test_dag_tutorial.create_postgres_table scheduled__2020-06-23T00:00:00+00:00 [queued]>
[2023-11-02T11:24:59.357+0000] {taskinstance.py:1165} INFO - Dependencies all met for <TaskInstance: test_dag_tutorial.create_postgres_table scheduled__2020-06-23T00:00:00+00:00 [queued]>
[2023-11-02T11:24:59.358+0000] {taskinstance.py:1362} INFO - 
--------------------------------------------------------------------------------
[2023-11-02T11:24:59.359+0000] {taskinstance.py:1363} INFO - Starting attempt 1 of 1
[2023-11-02T11:24:59.360+0000] {taskinstance.py:1364} INFO - 
--------------------------------------------------------------------------------
[2023-11-02T11:24:59.405+0000] {taskinstance.py:1383} INFO - Executing <Task(PostgresOperator): create_postgres_table> on 2020-06-23 00:00:00+00:00
[2023-11-02T11:24:59.413+0000] {standard_task_runner.py:55} INFO - Started process 3287 to run task
[2023-11-02T11:24:59.417+0000] {standard_task_runner.py:82} INFO - Running: ['***', 'tasks', 'run', 'test_dag_tutorial', 'create_postgres_table', 'scheduled__2020-06-23T00:00:00+00:00', '--job-id', '497', '--raw', '--subdir', 'DAGS_FOLDER/test_dag_tutorial.py', '--cfg-path', '/tmp/tmp98dmqi7i']
[2023-11-02T11:24:59.419+0000] {standard_task_runner.py:83} INFO - Job 497: Subtask create_postgres_table
[2023-11-02T11:24:59.601+0000] {task_command.py:376} INFO - Running <TaskInstance: test_dag_tutorial.create_postgres_table scheduled__2020-06-23T00:00:00+00:00 [running]> on host 1dfdc0df4852
[2023-11-02T11:24:59.788+0000] {taskinstance.py:1592} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=tetiana
AIRFLOW_CTX_DAG_ID=test_dag_tutorial
AIRFLOW_CTX_TASK_ID=create_postgres_table
AIRFLOW_CTX_EXECUTION_DATE=2020-06-23T00:00:00+00:00
AIRFLOW_CTX_TRY_NUMBER=1
AIRFLOW_CTX_DAG_RUN_ID=scheduled__2020-06-23T00:00:00+00:00
[2023-11-02T11:24:59.817+0000] {base.py:71} INFO - Using connection ID 'postgres_localhost' for task execution.
[2023-11-02T11:24:59.853+0000] {sql.py:315} INFO - Running statement: 
        create table if not exists people (
        Index primary key,
        User_ID TEXT NOT NULL,
        Last_Name TEXT NOT NULL,
        Sex TEXT NOT NULL,
        Email TEXT NOT NULL,
        Phone TEXT NOT NULL,
        Date_of_birth date NOT NULL
        Job_Title  TEXT NOT NULL
        

        )
        , parameters: None
[2023-11-02T11:24:59.886+0000] {taskinstance.py:1851} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/postgres/operators/postgres.py", line 94, in execute
    self.hook.run(self.sql, self.autocommit, parameters=self.parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 295, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 320, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "primary"
LINE 3:         Index primary key,
                      ^

[2023-11-02T11:24:59.915+0000] {taskinstance.py:1406} INFO - Marking task as FAILED. dag_id=test_dag_tutorial, task_id=create_postgres_table, execution_date=20200623T000000, start_date=20231102T112459, end_date=20231102T112459
[2023-11-02T11:24:59.993+0000] {standard_task_runner.py:105} ERROR - Failed to execute job 497 for task create_postgres_table (syntax error at or near "primary"
LINE 3:         Index primary key,
                      ^
; 3287)
[2023-11-02T11:25:00.011+0000] {local_task_job.py:164} INFO - Task exited with return code 1
[2023-11-02T11:25:00.084+0000] {local_task_job.py:273} INFO - 0 downstream tasks scheduled from follow-on schedule check
